@@ -1,3 +1,8 @@
+Fri Aug  4 00:59:20 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>
+
+	* cleanup.c (pty_cleanup): Add missing declarations for retval and
+		fd.  Also, align preprocessor directives with left margin.
+
 Thu Aug  3 15:04:34 1995  Sam Hartman  <hartmans@tertius.mit.edu>
 
 	* configure.in: Check for vhangup and killpg.
